tests/ui/pattern/usefulness/type_polymorphic_byte_str_literals.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/type_polymorphic_byte_str_literals.rs:11:11
   |
LL |     match data {
   |           ^^^^ pattern `&[_, ..]` not covered
   |
   = note: the matched value is of type `&[u8]`
help: ensure that all possible cases are being handled by adding an arm to handle the `&[_, ..]` case
   |
LL ~         b"" => 1,
LL +         &[_, ..] => { todo!() },
   |

error[E0004]: match is non-exhaustive
  --> $DIR/type_polymorphic_byte_str_literals.rs:23:11
   |
LL |     match data {
   |           ^^^^ patterns `&[]`, `&[_]`, `&[_, _]` and 1 more not covered
   |
   = note: the matched value is of type `&[u8]`
help: ensure that all possible cases are being handled by adding more match arms
   |
LL ~         [_, _, _] => 1,
LL +         &[] => { todo!() },
LL +         &[_] => { todo!() },
LL +         &[_, _] => { todo!() },
LL +         &[_, _, _, _, ..] => { todo!() },
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
